# Taban

./: .gitignore  CMakeLists.txt  README.md  array.c  array.h  common.h  main.c  str.c
error/: result.c  result.h  trace.c  trace.h
memory/: allocator.c  allocator.h  pool.c  pool.h
source/: CMakeLists.txt  allocator.c  allocator.h  havuz.c  havuz.h  main.c
src/: CMakeLists.txt  havuz.c
